# fc-ks

./: CMakeLists.txt
k1/: CMakeLists.txt  Makefile  main.c
k2/: CMakeLists.txt  Makefile  hello.c
k3/: b.bat  emu.bat  main.fab
pixelart/: tanya_16x16.aseprite
